# git-branch-manager

./: .gitignore  CMakeLists.txt  README.md
include/: branch_manager.hpp  db.hpp
src/: branch_manager.cpp  db.cpp  main.cpp
